# ferrishot

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CLI.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  book.toml  build.rs  clippy.toml  default-config.kdl  default.kdl  default.kdlOBXp7A.bck  dist-workspace.toml  flake.nix  index.html  key.txt  lol.kdl  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml  gh-pages.yml  release.yml
completions/: _ferrishot  _ferrishot.ps1  ferrishot.1  ferrishot.bash  ferrishot.elv  ferrishot.fish  ferrishot.md  ferrishot.nu  ferrishot.ts  ferrishot.yaml
docgen/: Cargo.toml
docgen/src/: main.rs
docs/: book.toml  index.html
docs/src/: SUMMARY.md  installation.md  usage.md
docs/theme/: index.hbs  theme.css
icons/: README.md
src/: app.rs  canvas.rs  clipboard.rs  config.rs  constants.rs  corners.rs  defaults.rs  geometry.rs  icons.rs  image_action.rs  image_renderer.rs  image_upload.rs  key.rs  last_region.rs  lazy_rect.rs  lib.rs  logging.rs  main.rs  message.rs  mouse.rs  rect.rs  rectangle.rs  screenshot.rs  selection.rs  stdx.rs  theme.rs  widget.rs  widgets.rs
src/config/: cli.rs  commands.rs  definition.rs  key.rs  macros.rs  mod.rs  named_key.rs  options.rs
src/iced_aw/: core.rs  mod.rs  style.rs  widget.rs
src/iced_aw/widget/: card.rs  helpers.rs  number_input.rs  tab_bar.rs  typed_input.rs
src/iced_aw/widget/overlay/: color_picker.rs  date_picker.rs  mod.rs  time_picker.rs
src/iced_aw/widget/sidebar/: sidebar.rs
src/image/: action.rs  mod.rs  rgba_handle.rs  upload.rs
src/ui/: app.rs  background_image.rs  debug_overlay.rs  errors.rs  grid.rs  image_uploaded.rs  keybindings_cheatsheet.rs  letters.rs  mod.rs  selection.rs  selection_icons.rs  size_indicator.rs  welcome_message.rs
src/ui/popup/: image_uploaded.rs  keybindings_cheatsheet.rs  letters.rs  mod.rs
src/widget/: app.rs  background_image.rs  debug_overlay.rs  icon.rs  icons.rs  image_uploaded.rs  letters.rs  mod.rs  selection.rs  selection_icons.rs  size_indicator.rs
tests/: lib.rs
wix/: main.wxs
