[package]
name = "ferrishot"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
description = "A cross-platform desktop screenshot app"
repository = "_"
keywords = ["_"]
categories = ["_"]
authors = ["Nik Revenco"]

[dependencies]
mouse_position = "0.1.4"
xcap = { version = "0.4.1", features = ["image", "vendored"] }
iced = { rev = "bd90a396eb0d844e036e210ee28945973b2e4163", git = "https://github.com/nik-rev/iced.git", version = "0.14.0-dev", features = [
  "canvas",
  "image",
  "web-colors",
  "advanced",
] }
image = "0.25.6"
thiserror = "2.0.12"
delegate = "0.13"
env_logger = "0.11.8"
log = "0.4.27"
easy-ext = "1.0.2"
derive_more = { version = "2.0.1", features = ["is_variant"] }
arboard = { version = "3.5", features = ["wayland-data-control"] }
notify-rust = { version = "4.11.7", features = ["image"] }
clap = { version = "4.5.35", features = ["derive"] }
rfd = { version = "0.15.3", path = "./rfd" }
# rfd = "0.15.3"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }

missing_docs_in_private_items = "warn"
too_many_lines = "allow"
