[package]
name = "ferrishot"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
description = "A cross-platform desktop screenshot app"
repository = "https://github.com/nik-rev/ferrishot"
homepage = "https://github.com/nik-rev/ferrishot"
keywords = ["screenshot", "screen-capture", "capture", "flameshot"]
categories = ["visualization", "multimedia"]
authors = ["Nik Revenco"]

[dependencies]
mouse_position = "0.1.4"
xcap = { version = "0.4.1", features = ["image", "vendored"] }
iced = { package = "ferrishot_iced", version = "0.14.1", features = [
  "canvas",
  "image",
  "web-colors",
  "advanced",
] }
image = "0.25.6"
thiserror = "2.0.12"
delegate = "0.13"
env_logger = "0.11.8"
log = "0.4.27"
easy-ext = "1.0.2"
derive_more = { version = "2.0.1", features = ["is_variant"] }
arboard = { version = "3.5", features = ["wayland-data-control"] }
notify-rust = { version = "4.11.7", features = ["images"] }
clap = { version = "4.5.35", features = ["derive"] }
rfd = "0.15.3"

etcetera = "0.10.0"
chrono = "0.4.40"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }

missing_docs_in_private_items = "warn"
too_many_lines = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
