[package]
name = "ferrishot"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2024"
description = "A cross-platform desktop screenshot app"
repository = "https://github.com/nik-rev/ferrishot"
homepage = "https://github.com/nik-rev/ferrishot"
keywords = ["screenshot", "screen-capture", "capture", "flameshot"]
categories = ["visualization", "multimedia"]
authors = ["Nik Revenco"]

[dev-dependencies]
mdbook-admonish = "0.4"
mdbook-alerts = "0.7.0"

[build-dependencies]
image = "0.25.6"

[dependencies]
mouse_position = "0.1.4"
xcap = { version = "0.4.1", features = ["image", "vendored"] }
iced = { package = "ferrishot_iced", version = "0.14.1", features = [
  "canvas",
  "image",
  "web-colors",
  "advanced",
  "svg",
  "wgpu",
] }
image = "0.25.6"
thiserror = "2.0.12"
delegate = "0.13"
env_logger = "0.11.8"
log = "0.4.27"
easy-ext = "1.0.2"
derive_more = { version = "2.0.1", features = ["is_variant"] }
arboard = { version = "3.5", features = ["wayland-data-control"] }
notify-rust = { version = "4.11.7", features = ["images"] }
clap = { version = "4.5.35", features = ["derive"] }
rfd = "0.15.3"

etcetera = "0.10.0"
chrono = "0.4.40"
tempfile = "3.19.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.20.0"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }

too_many_lines = "allow"
# casts from floats -> int are common in the code, and in
# most cases we don't care about precision as we are
# dealing with pixels which cannot be float.
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

allow_attributes_without_reason = "warn"
allow_attributes = "warn"
unwrap_used = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
