[package]
name = "docgen"
version = "0.1.0"
edition = "2024"

[dependencies]
ferrishot = { path = ".." }
clap = { version = "4.5.35", features = ["derive"] }
clap_complete = "4.5.49"
clap_complete_nushell = "4.5.5"
clap-markdown = "0.1.5"
carapace_spec_clap = "1.1.0"
clap_complete_fig = "4.5.2"
clap_mangen = "0.2.26"
